fix button styling on mobile layouts

--- a/server/front/style/style.css
+++ b/server/front/style/style.css
@@ -122,6 +122,9 @@ body {
 	margin-top: 30px;
 	display: flex;
 	align-items: center;
+	justify-content: center;
+	gap: 10px;
+	flex-wrap: wrap;
 }
 
 #intro-right a {
@@ -130,7 +133,6 @@ body {
 	background-color: var(--color-background-button);
 	background-size: 20px;
 	padding: 10px 20px 10px 40px;
-	margin: 0 10px;
 	box-shadow: 0 0 20px black;
 	color: var(--color-font-link);
 }
